--- a/project_part3/book_catalog/Dockerfile
+++ b/project_part3/book_catalog/Dockerfile
@@ -1,1 +1,17 @@
-# Your Solution
+# Use an official Python runtime as a parent image
+FROM --platform=linux/amd64 python:3.10-slim
+
+# Set the working directory in the container
+WORKDIR /app
+
+# Copy all contents of the current directory into the container
+COPY . .
+
+# Install any needed packages specified in requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Make port 8000 available to the world outside this container
+EXPOSE 8000
+
+# Run app.py when the container launches
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]# Your Solution
