--- a/project_part3/scripts/deployment.yml
+++ b/project_part3/scripts/deployment.yml
@@ -1,1 +1,81 @@
-# Your Solution
+---
+# Book Catalog Deployment
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: book-catalog-deployment
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: book-catalog
+  template:
+    metadata:
+      labels:
+        app: book-catalog
+    spec:
+      containers:
+      - name: book-catalog
+        image: task03.azurecr.io/project_part3-book_catalog:v1
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 8000
+        env:
+        - name: DATABASE_URL
+          value: "postgresql://task3_user:CzqITBeKF5vwb2GHO9r0VpcVtm8bo2Fa@dpg-crkordrv2p9s73e592u0-a/task3?sslmode=require"
+
+---
+# Book Catalog Service
+apiVersion: v1
+kind: Service
+metadata:
+  name: book-catalog-service
+spec:
+  selector:
+    app: book-catalog
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8000
+  type: LoadBalancer
+
+---
+# Inventory Management Deployment
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: inventory-management-deployment
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: inventory-management
+  template:
+    metadata:
+      labels:
+        app: inventory-management
+    spec:
+      containers:
+      - name: inventory-management
+        image: task03.azurecr.io/project_part3-inventory_management:s1
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 8001
+        env:
+        - name: DATABASE_URL
+          value: "postgresql://task3_user:CzqITBeKF5vwb2GHO9r0VpcVtm8bo2Fa@dpg-crkordrv2p9s73e592u0-a/task3?sslmode=require"
+
+---
+# Inventory Management Service
+apiVersion: v1
+kind: Service
+metadata:
+  name: inventory-management-service
+spec:
+  selector:
+    app: inventory-management
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8001
+  type: LoadBalancer
